fixed overflow issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
 .page {
   padding-top: 80px;
   margin-bottom: 1px;
+  overflow: hidden;
 }
 
 .App {
